200 OK http://house.gov.by/ru/deputies-ru/view/ulaxovich-nikolaj-598/

--- a/house.gov.by/d49560ded5bf2825ab67d7659c5855828a98c00a.yml
+++ b/house.gov.by/d49560ded5bf2825ab67d7659c5855828a98c00a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 23 Oct 2017 16:55:58 GMT
+    - Wed, 25 Oct 2017 19:20:39 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=5eq8v6lcbsvet1qauv4125po36; path=/
+    - PHPSESSID=8lvoi865eagp0mbkg4ejalnp64; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 23 Oct 2017 16:55:58 GMT
+recorded_at: Wed, 25 Oct 2017 19:20:39 GMT
