--- a/house.gov.by/87f447c456f26f395fa11ed8a0d87ee14576be22.yml
+++ b/house.gov.by/87f447c456f26f395fa11ed8a0d87ee14576be22.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 19:25:43 GMT
+    - Wed, 25 Oct 2017 19:39:56 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=4hjlanbqv14441dmn0rn9vm5m6; path=/
+    - PHPSESSID=lpmm9fj2o5k3vip5bpae10n4i4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 19:25:43 GMT
+recorded_at: Wed, 25 Oct 2017 19:39:56 GMT
