--- a/house.gov.by/735daa1cb81e3ac118309362e8312e61674a46b1.yml
+++ b/house.gov.by/735daa1cb81e3ac118309362e8312e61674a46b1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 18:02:37 GMT
+    - Wed, 25 Oct 2017 19:47:54 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=dek3ouhb3t1oasu2gdfedplja2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 18:02:38 GMT
+recorded_at: Wed, 25 Oct 2017 19:47:54 GMT
