--- a/house.gov.by/9a85211e61a86ce548cc5cf1a7cbfff538a6e9ea.yml
+++ b/house.gov.by/9a85211e61a86ce548cc5cf1a7cbfff538a6e9ea.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 19:28:11 GMT
+    - Wed, 25 Oct 2017 19:56:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=o5r16tnnq0idm4hqpj19prbab5; path=/
+    - PHPSESSID=p3qv8bo2b4tckj30qb47u8tnr5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 19:28:12 GMT
+recorded_at: Wed, 25 Oct 2017 19:56:40 GMT
