--- a/house.gov.by/c00a4c423678c1c97adf54eb4aac6fe0d24dcad8.yml
+++ b/house.gov.by/c00a4c423678c1c97adf54eb4aac6fe0d24dcad8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 18:13:12 GMT
+    - Wed, 25 Oct 2017 20:05:41 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=fca8u2o4bmt9c53umr0sv13031; path=/
+    - PHPSESSID=b079u8lnbvk8ip42kd6u1s2ao1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 18:13:13 GMT
+recorded_at: Wed, 25 Oct 2017 20:05:41 GMT
