--- a/house.gov.by/9f2be3c31ad3be4c56000ccfcf1f5aae503958b5.yml
+++ b/house.gov.by/9f2be3c31ad3be4c56000ccfcf1f5aae503958b5.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 19:09:32 GMT
+    - Wed, 25 Oct 2017 20:34:20 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=eddueik8vbe1kcb11olav2tqr2; path=/
+    - PHPSESSID=0grqe6pqrq27f63t1438hvech4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 19:09:32 GMT
+recorded_at: Wed, 25 Oct 2017 20:34:20 GMT
