--- a/house.gov.by/468b1dd6f4bdbfacd90f0dc4afeda682cf6713f2.yml
+++ b/house.gov.by/468b1dd6f4bdbfacd90f0dc4afeda682cf6713f2.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 19:08:02 GMT
+    - Wed, 25 Oct 2017 20:52:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=54p2pa6s97d319t0ucc9a0f9p0; path=/
+    - PHPSESSID=l15ukoh53v7buramue1b3lfcf7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 19:08:03 GMT
+recorded_at: Wed, 25 Oct 2017 20:52:59 GMT
