--- a/house.gov.by/580758077f7204a629be2807425a6d1aa9522ede.yml
+++ b/house.gov.by/580758077f7204a629be2807425a6d1aa9522ede.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 19:23:15 GMT
+    - Wed, 25 Oct 2017 21:02:33 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=64ua401t66qvhcvkasde6a4bd1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 19:23:15 GMT
+recorded_at: Wed, 25 Oct 2017 21:02:33 GMT
