--- a/house.gov.by/29d706cd0fcf9ac1ab414c688071538d3289280b.yml
+++ b/house.gov.by/29d706cd0fcf9ac1ab414c688071538d3289280b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 18:48:16 GMT
+    - Wed, 25 Oct 2017 21:13:20 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=70ds6gc976cs2gp3539upufjo4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 18:48:16 GMT
+recorded_at: Wed, 25 Oct 2017 21:13:22 GMT
