200 OK http://house.gov.by/ru/deputies-ru/view/shevtsov-dmitrij-234/

--- a/house.gov.by/a5a73b7476d4a0a00805b19eabbfecbb25c828a5.yml
+++ b/house.gov.by/a5a73b7476d4a0a00805b19eabbfecbb25c828a5.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 19:28:38 GMT
+    - Wed, 25 Oct 2017 21:16:18 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=sv5mdr883b4rucbn35ll8l8vn4; path=/
+    - PHPSESSID=7ihgdvu8oi5315u1erkh19uan5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 19:28:38 GMT
+recorded_at: Wed, 25 Oct 2017 21:16:18 GMT
