--- a/house.gov.by/5a4f6091558c47424aececa0159e0fca59f54d7a.yml
+++ b/house.gov.by/5a4f6091558c47424aececa0159e0fca59f54d7a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 21:18:54 GMT
+    - Wed, 25 Oct 2017 21:25:09 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=nc4pdl17advttj0uo6dl7hrbc4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 21:18:54 GMT
+recorded_at: Wed, 25 Oct 2017 21:25:10 GMT
