--- a/house.gov.by/d598141b9b8846a40829a7d6da6d78656d7936d8.yml
+++ b/house.gov.by/d598141b9b8846a40829a7d6da6d78656d7936d8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 21:04:26 GMT
+    - Wed, 25 Oct 2017 21:30:12 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=7fld1lv5p71rfj3m97q0pg1vl0; path=/
+    - PHPSESSID=7rlqgq9ni5dtvrr1nekrebqj20; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 21:04:27 GMT
+recorded_at: Wed, 25 Oct 2017 21:30:13 GMT
