--- a/house.gov.by/5cdfb777497bb1c107082ec4e25026842416f62c.yml
+++ b/house.gov.by/5cdfb777497bb1c107082ec4e25026842416f62c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 19:55:30 GMT
+    - Thu, 26 Oct 2017 17:20:55 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=0vch29quc5h8tigkdn5jqm51u6; path=/
+    - PHPSESSID=m9dbqbd8046fga5hfgsrr1lgs3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 19:55:31 GMT
+recorded_at: Thu, 26 Oct 2017 17:20:55 GMT
