--- a/house.gov.by/dec2293fc956e79a4bc91eccd8fe48d84e328beb.yml
+++ b/house.gov.by/dec2293fc956e79a4bc91eccd8fe48d84e328beb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 20:33:40 GMT
+    - Thu, 26 Oct 2017 17:39:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=ekm3betjiq5sb559i3f177o4n5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 20:33:40 GMT
+recorded_at: Thu, 26 Oct 2017 17:39:40 GMT
