--- a/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.yml
+++ b/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 20:57:42 GMT
+    - Thu, 26 Oct 2017 17:41:13 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=djmrimn6rllkerf3q2tqlfeuk7; path=/
+    - PHPSESSID=o7vsc9ls4006o79khr5j0cv8i2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 20:57:43 GMT
+recorded_at: Thu, 26 Oct 2017 17:41:14 GMT
