--- a/house.gov.by/6c00ea3b441533a219abd352fa8bcd894e43d78d.yml
+++ b/house.gov.by/6c00ea3b441533a219abd352fa8bcd894e43d78d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 20:04:10 GMT
+    - Thu, 26 Oct 2017 17:51:37 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ha3m1iv1lilfjje9or3dl27n25; path=/
+    - PHPSESSID=funvf27h1rhhsgvt2fq0p0lsv0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 20:04:10 GMT
+recorded_at: Thu, 26 Oct 2017 17:51:39 GMT
