--- a/house.gov.by/8e4b9accf9e8a1094b1f341c747bc954bae45370.yml
+++ b/house.gov.by/8e4b9accf9e8a1094b1f341c747bc954bae45370.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 19:34:22 GMT
+    - Thu, 26 Oct 2017 18:00:55 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=q28rccj0j7merq75rfenphrp74; path=/
+    - PHPSESSID=pimdvkjflbc4u86umrg1ip0e25; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 19:34:22 GMT
+recorded_at: Thu, 26 Oct 2017 18:00:56 GMT
