200 OK http://house.gov.by/ru/deputies-ru/view/mychko-olga-627/

--- a/house.gov.by/d95e4c5cb66cff99aa795994d3afb30976236f73.yml
+++ b/house.gov.by/d95e4c5cb66cff99aa795994d3afb30976236f73.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 21:20:37 GMT
+    - Thu, 26 Oct 2017 18:05:50 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=fte8qm2b8fn49aqqru27shd3f2; path=/
+    - PHPSESSID=nsi1a4ih8dbi7htsgga79ei7n1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 21:20:37 GMT
+recorded_at: Thu, 26 Oct 2017 18:05:51 GMT
