--- a/house.gov.by/87f447c456f26f395fa11ed8a0d87ee14576be22.yml
+++ b/house.gov.by/87f447c456f26f395fa11ed8a0d87ee14576be22.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 25 Oct 2017 21:28:53 GMT
+    - Thu, 26 Oct 2017 18:38:32 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=rafngd3c8ldc5ujv0htotjska5; path=/
+    - PHPSESSID=uaucqn2eqc1nb13s95kg9hhce6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 25 Oct 2017 21:28:53 GMT
+recorded_at: Thu, 26 Oct 2017 18:38:33 GMT
