200 OK http://house.gov.by/ru/deputies-ru/view/chekan-svetlana-231/

--- a/house.gov.by/daaa73805e9fe148233c94c1671cd7492cf1b742.yml
+++ b/house.gov.by/daaa73805e9fe148233c94c1671cd7492cf1b742.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 18:40:05 GMT
+    - Thu, 26 Oct 2017 19:27:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=l3uccq9a3gcvj0o3kkt7ci32c0; path=/
+    - PHPSESSID=i2e584if7f2vo55a5cljdkqo57; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 18:40:06 GMT
+recorded_at: Thu, 26 Oct 2017 19:27:16 GMT
