200 OK http://house.gov.by/ru/deputies-ru/view/markevich-aleksandr-580/

--- a/house.gov.by/e3f7e082dd2d8aad9dc8973f76eaa1ed72a5d856.yml
+++ b/house.gov.by/e3f7e082dd2d8aad9dc8973f76eaa1ed72a5d856.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 17:57:49 GMT
+    - Thu, 26 Oct 2017 19:34:28 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=vavv2kjbf0l9sfotq1ovovcs17; path=/
+    - PHPSESSID=io7dp75pk1dou9kp11nt209nc7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 17:57:50 GMT
+recorded_at: Thu, 26 Oct 2017 19:34:29 GMT
