200 OK http://house.gov.by/ru/deputies-ru/view/markevich-ivan-595/

--- a/house.gov.by/42ad481d1268b9df2495229a7103b09352bfa8f1.yml
+++ b/house.gov.by/42ad481d1268b9df2495229a7103b09352bfa8f1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 26 Oct 2017 17:58:40 GMT
+    - Thu, 26 Oct 2017 19:47:04 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=4k0dg8dcoj1a2uuf30d3jimmo1; path=/
+    - PHPSESSID=rqt6n7v36g5qftc13m0016j026; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 26 Oct 2017 17:58:41 GMT
+recorded_at: Thu, 26 Oct 2017 19:47:05 GMT
