200 OK http://house.gov.by/ru/deputies-ru/view/jakubovich-tatjjana-543/

--- a/house.gov.by/eba9dcf24b9e436be091da41152b7bee4250a607.yml
+++ b/house.gov.by/eba9dcf24b9e436be091da41152b7bee4250a607.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 02:51:42 GMT
+    - Fri, 27 Oct 2017 02:57:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=0ho1gsoa6kt6vtagr65dkrppv2; path=/
+    - PHPSESSID=hrop5uf5dg7t9tgdq2u6phlnq3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 02:51:43 GMT
+recorded_at: Fri, 27 Oct 2017 02:58:00 GMT
