200 OK http://house.gov.by/ru/deputies-ru/view/krasovskaja-tamara-181/

--- a/house.gov.by/03666e2052194ccd0d620d67ad9c3b5b50e78b2a.yml
+++ b/house.gov.by/03666e2052194ccd0d620d67ad9c3b5b50e78b2a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 01:56:57 GMT
+    - Fri, 27 Oct 2017 03:47:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=5urigr20h702fkus8nvrrl9mq3; path=/
+    - PHPSESSID=pplo8hf102s7l0gb92lsa11ai7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 01:56:58 GMT
+recorded_at: Fri, 27 Oct 2017 03:47:46 GMT
