200 OK http://house.gov.by/ru/deputies-ru/view/komarovskij-igor-617/

--- a/house.gov.by/056d7ac32a3021e1e115ec3c4b54f9fd094a228c.yml
+++ b/house.gov.by/056d7ac32a3021e1e115ec3c4b54f9fd094a228c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 01:51:37 GMT
+    - Fri, 27 Oct 2017 04:14:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ueodlo9ubnlrp2vi9g0hq9mer6; path=/
+    - PHPSESSID=qpt733bmqakjbc816a00cifk40; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 01:51:39 GMT
+recorded_at: Fri, 27 Oct 2017 04:14:46 GMT
