200 OK http://house.gov.by/ru/deputies-ru/view/vasilkov-nikolaj-567/

--- a/house.gov.by/6b0e47221c93384e6c0ea49a44dac33611be5f06.yml
+++ b/house.gov.by/6b0e47221c93384e6c0ea49a44dac33611be5f06.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 03:24:24 GMT
+    - Fri, 27 Oct 2017 05:14:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=p0a2j9riq35uqnct8u0l0n46q0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 03:24:26 GMT
+recorded_at: Fri, 27 Oct 2017 05:14:01 GMT
