200 OK http://house.gov.by/ru/deputies-ru/view/ulaxovich-nikolaj-598/

--- a/house.gov.by/d49560ded5bf2825ab67d7659c5855828a98c00a.yml
+++ b/house.gov.by/d49560ded5bf2825ab67d7659c5855828a98c00a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Fri, 27 Oct 2017 03:57:55 GMT
+    - Fri, 27 Oct 2017 05:18:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=onmh509q5n841lcvc25b2d7d20; path=/
+    - PHPSESSID=ei07b84f4s412hmmv2jbd1ceu2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 27 Oct 2017 03:57:56 GMT
+recorded_at: Fri, 27 Oct 2017 05:18:45 GMT
