200 OK http://house.gov.by/ru/deputies-ru/view/nevar-igor-549/

--- a/house.gov.by/ee05aa364c6bfd50c59a9f3f647df095bd14d75c.yml
+++ b/house.gov.by/ee05aa364c6bfd50c59a9f3f647df095bd14d75c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 11:17:19 GMT
+    - Sat, 28 Oct 2017 12:01:30 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=7h870jlc232tsjp7mu0355oqi7; path=/
+    - PHPSESSID=a6kl03rkr0nifaqrt0lfdggjq2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 11:17:19 GMT
+recorded_at: Sat, 28 Oct 2017 12:01:31 GMT
