200 OK http://house.gov.by/ru/deputies-ru/view/lukashov-anatolij-561/

--- a/house.gov.by/c232bbe7392341325100831a4df8793e387d4081.yml
+++ b/house.gov.by/c232bbe7392341325100831a4df8793e387d4081.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 10:59:39 GMT
+    - Sat, 28 Oct 2017 12:19:51 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=bj4chiib360476g4363b4r9dd0; path=/
+    - PHPSESSID=v340mkrm78gefm4fo1mqph9094; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 10:59:40 GMT
+recorded_at: Sat, 28 Oct 2017 12:19:52 GMT
