200 OK http://house.gov.by/ru/deputies-ru/view/makarina-kibak-ljudmila-618/

--- a/house.gov.by/e0bfa57e716611ea6eacdda6cc645de1d148b08c.yml
+++ b/house.gov.by/e0bfa57e716611ea6eacdda6cc645de1d148b08c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 11:00:04 GMT
+    - Sat, 28 Oct 2017 13:13:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=4djggub3hhkvbcnr44bba1jd94; path=/
+    - PHPSESSID=tp106bm7kne08d4ng4ph9m9jd6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 11:00:05 GMT
+recorded_at: Sat, 28 Oct 2017 13:14:00 GMT
