200 OK http://house.gov.by/ru/deputies-ru/view/miloshevskij-valentin-194/

--- a/house.gov.by/8e4b9accf9e8a1094b1f341c747bc954bae45370.yml
+++ b/house.gov.by/8e4b9accf9e8a1094b1f341c747bc954bae45370.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 11:53:12 GMT
+    - Sat, 28 Oct 2017 14:49:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=9pqs0nq12hc4r3o9rd2h7jeuf4; path=/
+    - PHPSESSID=9c418ruqqhrmk4fv4tv64vl2j2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 11:53:12 GMT
+recorded_at: Sat, 28 Oct 2017 14:49:25 GMT
