200 OK http://house.gov.by/ru/deputies-ru/view/levshunov-oleg-188/

--- a/house.gov.by/6c00ea3b441533a219abd352fa8bcd894e43d78d.yml
+++ b/house.gov.by/6c00ea3b441533a219abd352fa8bcd894e43d78d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 14:41:42 GMT
+    - Wed, 01 Nov 2017 11:12:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=gc47r046dds7bcbqb7ad07jq74; path=/
+    - PHPSESSID=ij9r946l6muol1pe4vk3kft0q6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 14:41:44 GMT
+recorded_at: Wed, 01 Nov 2017 11:12:47 GMT
