200 OK http://house.gov.by/ru/deputies-ru/view/lobach-jurij-593/

--- a/house.gov.by/0890fe2c7ba5e76e3a7d44d01ccfafdba0e5e95d.yml
+++ b/house.gov.by/0890fe2c7ba5e76e3a7d44d01ccfafdba0e5e95d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 15:01:14 GMT
+    - Wed, 01 Nov 2017 11:16:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=2ca031hl3nmo5u33ek5pnh1fc1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 15:01:14 GMT
+recorded_at: Wed, 01 Nov 2017 11:16:09 GMT
